--- a/src/index.css
+++ b/src/index.css
@@ -202,3 +202,28 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+@keyframes float {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(30px, -4px);
+  }
+  50% {
+    transform: translate(20px, 4px);
+  }
+  75% {
+    transform: translate(40px, -4px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+
+.floating-text {
+  display: inline-block;
+  animation: float 10s ease-in-out infinite;
+}
+
